# ai-football-video-analysis

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  explore_detections.py  explore_events.py  explore_teams.py  explore_tracks.py  pyproject.toml  run_ui.py
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  fast_test.yaml
data/samples/: README.md
src/: cli.py
src/config/: schemas.py
src/events/: __init__.py  ball_trajectory.py  detection.py
src/export/: overlay.py
src/pipeline/: base.py
src/ui/: __init__.py  server.py
src/ui/static/: app.js  index.html
src/video/: reader.py
src/vision/detect/: yolo.py
src/vision/team/: __init__.py  clustering.py  colors.py
src/vision/track/: __init__.py  bytetrack.py  kalman.py
tests/unit/: test_config.py  test_detection.py  test_overlay.py
